1.4.3a/_sources/quickstart.rst.txt
Quickstart
===========
This guide will walk you through the process of adding your first manual/doc, which for examples sake, will be this documentation. This guide will also assume that you have a fresh install of the plugin, and have not changed any settings.

Opening the settings
--------------------
To open up the settings website, type ``rtfm`` into flow launcher and press the ``Open Settings`` result.

.. NOTE::
    See :doc:`main_keyword` for more information on that keyword.

.. image:: /_static/images/quickstart/rtfm_result_example_darkmode.png
    :class: only-dark
    
.. image:: /_static/images/quickstart/rtfm_result_example_lightmode.png
    :class: only-light

Adding the doc
--------------
Find the ``Add Manual`` section, and input a keyword and location for the doc/manual. In our case, we will choose ``kw`` as the keyword, and ``rtfm.cibere.dev/dev`` as the location. Then press the ``Add`` button to add it.

.. NOTE::
    See :doc:`settings` for more information on the plugin settings.

.. image:: /_static/images/quickstart/add_manual_darkmode.png
    :class: only-dark
    
.. image:: /_static/images/quickstart/add_manual_lightmode.png
    :class: only-light

Editing the doc
-------------------
To edit the manual/doc, scroll down until you find the doc/manual we just added. In our case, we are just going to leave it as-is.

.. NOTE::
    See :ref:`the editing a manual section <edit_manual>` for information about the different fields.

.. image:: /_static/images/quickstart/edit_manual_darkmode.png
    :class: only-dark
    
.. image:: /_static/images/quickstart/edit_manual_lightmode.png
    :class: only-light

Save the settings
------------------
Now we are going to save our settings so that it actually gets added to the plugin and so that we can query it. To save the settings, scroll up until you find the ``Plugin Settings`` section, and press the ``Save Settings & Reload Cache`` button.

.. NOTE::

    See :ref:`the saving settings section <save_settings>` for more information about saving the settings.

.. image:: /_static/images/save_settings_example_darkmode.png
    :class: only-dark
    
.. image:: /_static/images/save_settings_example_lightmode.png
    :class: only-light

Querying the doc/manual
-----------------------
Now that we've added and saved our doc/manual, we can query it to see the results. As we set the keyword to ``kw`` in the `adding the doc step <#adding-the-doc>`__, we will be using the ``kw`` keyword to do so. So, using flow, type ``kw presets`` and see the results.

.. image:: /_static/images/quickstart/kw_presets_darkmode.png
    :class: only-dark
    
.. image:: /_static/images/quickstart/kw_presets_lightmode.png
    :class: only-light

Next Steps
-----------
Want to try it out with some more manuals? Here are some links you can practice with:

- https://ss64.com/bash
- https://jcristharif.com/msgspec
- https://docs.pytest.org/en/stable/
- https://developer.mozilla.org
- https://docs.astral.sh/uv/
- https://click.palletsprojects.com/en/stable
- https://docs.python.org/3
- https://docs.github.com

See the :ref:`editing a manual section <edit_manual>` for how to edit a manual.

See the :ref:`adding a manual section <add_manual>` for more information about adding a manual.

See the :ref:`manual troubleshooting section <manual_troubleshooting>` for help troubleshooting why a manual isn't getting added properly or at all.